Modern tags and registries. Resource loader. Updated tools API. Some loading and rendering optimizations. Partial saplings fix (requires leaves and dye fixes). Pre Java 17 enum instantiation. Removed metablocks module (as a part of deprecating usage of meta and updating tools API). Fuel tags for smelting.